{
    "name": "PlayerController",
    "maps": [
        {
            "name": "Movement",
            "id": "b8a7314a-b4d4-400d-9cc9-91e5ea2bd4fb",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "fd84d7c8-098d-459f-b650-cca52d552f40",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseDirection",
                    "type": "Value",
                    "id": "eefc4df0-5727-4e2a-b4a1-e433e6a766c7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "4d7dd30a-592b-4068-afaa-ab7ae419525a",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "c5f9e2ba-fe19-4109-8a3b-4c375f8132c1",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "39ade51d-0e75-4bc1-b308-f8fad6852b7f",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "34c91e16-c503-44b2-b5bc-770dddb29387",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "71baca85-bd0a-4e87-962f-b1fb7b8b3b7e",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "399bb8cc-a618-4bf7-a9c5-709ceebbf9e1",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseDirection",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}